[project]
name = "madrl-uav-mec"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "torch>=2.11.0",
    # Jupyter support
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.0",
    # ruff for linting
    "ruff>=0.15.22",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.ruff]
line-length = 90

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true